Fixed cards not wrapping

--- a/src/App.css
+++ b/src/App.css
@@ -60,3 +60,21 @@
     background-image: url('./assets/cms-dark.gif');
     height: 60px;
 }
+
+.slider-img{
+    transform: translateX(-100%);
+}
+
+.slider-img.transitioning-in{
+    transform: translateX(0%);
+    transition: translate .3s;
+}
+
+.slider-img.showing{
+    transform: translateX(0%);
+}
+
+.slider-img.transitioning-out{
+    transform: translateX(100%);
+    transition: translate .3s;
+}
